--- a/assets/styles/contact.css
+++ b/assets/styles/contact.css
@@ -1,57 +1,3 @@
-fieldset{
-    position:absolute;
-    width:100%;
-    height:100%;
-}
-
-legend{
-    font-family: DolceVita;
-    font-size: 2em;
-    margin-left: 10%;
-    padding-top: 6%;
-    border: none;
-    position: relative;
-}
-
-.label{
-    position: absolute;
-    padding-top: 3%;
-    color: black;
-    display: block;
-    left: 14%;
-    text-align: left;
-}
-
-.textbox{
-    display: block;
-    position: relative;
-    width: 75%;
-    border-radius: 15px;
-    height: 20px;
-    margin-top: 5%;
-    margin-left: 11%;
-    padding: 5px 0px 5px 5px;
-    font-size: 1em;
-}
-
-#message{
-    height: 35%;
-    position: relative;
-    left: 0%;
-    vertical-align: text-top;
-    border-width: 2px;
-    border-style: inset;
-    border-color: initial;
-    border-image: initial;
-}
-
-#submit{
-    position: relative;
-    background-color: purple;
-    height: 6%;
-    width: 25%;
-    color: white;
-    border-radius: 15px;
-    border-style: none;
-    margin: 7% 62%;
+form{
+    padding:3% 2%;
 }
