--- a/assets/styles/placeholder.css
+++ b/assets/styles/placeholder.css
@@ -1,12 +1,16 @@
 img{
-    margin-left: 32%;
-    margin-top: 3%;
+    margin-left: 13%;
+    margin-top: 4%;
     border-radius: 50%;
+    max-width:75%;
+    max-height:75%;
+    width: auto;
+    height: auto;
 }
 
 p{
     font-family: Calibri;
-    font-size: 24px;
+    font-size: 1.5em;
     text-align: center;
-    padding-top: 29px;
+    padding: 5%;
 }
