--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -3,11 +3,15 @@
     src: url(../media/DolceVita.ttf);
 }
 
+/*
+mobile header stylings
+**************
+**************
+*/
 a{
     text-decoration:none;
     color:white;
 }
-
 h1{
     color: white;
     font-family: DolceVita;
@@ -17,25 +21,14 @@ h1{
     margin-bottom:0%;
 }
 
-hr{
-    margin-bottom:1%;
-}
-
-i{
+.active{
+    background-color:white;
     color:purple;
-    padding:0% 3% 2% 0%;
+    font-weight:bold;
 }
 
-.about{
-    padding-bottom:5%;
-}
 .btn-primary{
     background-color:purple;
-}
-
-
-textarea.form-control {
-    height: 23vh;
 }
 
 .header{
@@ -48,38 +41,87 @@ textarea.form-control {
     margin-top:0%;
 }
 
+/*
+mobile footer stylings
+***************
+***************
+*/
+hr{
+    margin-bottom:1%;
+}
+
+i{
+    color:purple;
+    padding:0% 3% 2% 0%;
+}
+
 .fixed-bottom{
     background-color:white;
 }
 
+/*
+mobile center content stylings
+****************
+****************
+*/
 .subject{
     margin-top:5%;
-    margin-bottom: 11%;
+    margin-bottom: 20%;
+    z-index:0;
+    overflow-y:auto;
 }
+
 @media screen and (min-width:350px){
+/* 
+mobile bigger than iphone5 header stylings
+***************
+***************
+*/
     h1{
         font-size:2.25em;
     }
-
-    textarea.form-control {
-        height: 30vh;
+    
+    a{
+        font-weight:bold;
     }
 }
 
 @media screen and (min-width:768px){
+/*
+tablet header stylings
+***************
+***************
+*/
+    a:hover{
+        color:purple;
+    }
+
     h1{
         font-size:3em;
     }
 
-    h2{
-        font-size:3em;
+    .nav-item:hover{
+        background-color:white;
+
+    }
+    .header{
+        background-image:linear-gradient(to right, rgb(233, 17, 233),rgb(71, 14, 69));
+    }
+/*
+tablet footer stylings
+***************
+***************
+*/
+    hr{
+    margin-bottom:1%;
+    margin-top:0%;  
     }
 
-    hr{
-        margin-bottom:1%;
-        margin-top:0%;
-    }
-    
+/*
+tablet center content stylings
+****************
+****************
+*/
     .img-fluid {
         max-width: 100%;
         height: auto;
@@ -90,10 +132,39 @@ textarea.form-control {
         background-color:rgb(231, 231, 231);
         box-shadow: 1em 1em grey;
         border-radius:15px 5px;
+        height:60vh;
     }
 
 }
 
 @media screen and (min-width:980px){
+/*
+desktop header stylings
+***************
+***************
+*/
+    h1{
+        font-size:3.75em;
+    }
+    p{
+        font-size:1em;
+    }
 
+/*
+desktop content stylings
+************************
+************************
+*/   
+    .subject{
+        height:70vh;
+        margin-bottom:10vh;
+    }
+/*
+desktop footer stylings
+***************
+***************
+*/
+    i{
+        padding:0% 1% 1% 0%;
+    }
 }
