fixed placeholder image on desktop

--- a/assets/styles/placeholder.css
+++ b/assets/styles/placeholder.css
@@ -28,6 +28,6 @@ p{
 @media screen and (min-width:980px){
     img{
         max-width:50%;
-        max-height:auto;
+        max-height:60%;
     }
 }
